bloonix-server (0.42) released at 2015-11-15

    * Kicked deprecated fcgi support.
    * Fixed paths in systemd files if the server
      is installed manually.
    * Implemented Bloonix::NetAddr to parse IP ranges.

bloonix-server (0.41) released at 2015-09-18

    * Fixed uninitialized variable IPADDR6.

bloonix-server (0.40) released at 2015-09-17

    * Fixed tags that were not added to events.
    * Added variable IPADDR6.

bloonix-server (0.39) released at 2015-09-14

    * Enabled IPv6 support.

bloonix-server (0.38) released at 2015-09-06

    * status_nok_since is now updated correctly in table host.

bloonix-server (0.37) released at 2015-09-01

    * Fixed: force_timed_event is now resetted.

bloonix-server (0.36) released at 2015-09-01

    * Added field force_event to table service.
    * The server disconnects now if the db schema version changed.

bloonix-server (0.35) released at 2015-08-31

    * Fixed: try to prevent ntp issues by calculating the next service check.
    * If attempt_max is set to 0 then notifications are disabled.

bloonix-server (0.34) released at 2015-08-18

    * Fixed: Can't modify non-lvalue subroutine call at Server.pm line 1379.

bloonix-server (0.33) released at 2015-08-18

    * Fixed %preun section in spec file.
    * Moved the creation of user bloonix into the core package.

bloonix-server (0.32) released at 2015-08-15

    * Bloonix::Server dies now if no /usr/sbin/sendmail is found.

bloonix-server (0.31) released at 2015-08-06

    * Heavy changes and code improvements.
    * Kicked sms* and mail* parameter.
    * Re-designed the notification handling.

bloonix-server (0.30) released at 2015-06-16

    * bloonix-update-agent-host-config now checks on a very simple
      way if sysvinit or systemctl must be used to restart the agent.

bloonix-server (0.29) released at 2015-06-16

    * Fixed @@LIBDIR@@ and clean up the wrong directory.

bloonix-server (0.28) released at 2015-06-10
