@@ -80,11 +80,12 @@ if (@customer) {
 my $sth2 = $dbh->prepare(
     join(" ",
         'select count(*)',
-        'from sms_send',
-        'inner join host on sms_send.host_id = host.id',
+        'from notification',
+        'inner join host on notification.host_id = host.id',
         'where host.company_id = ?',
-        'and sms_send.time >= ?',
-        'and sms_send.time <= ?',
+        'and notification.message_service = ?',
+        'and notification.time >= ?',
+        'and notification.time <= ?'
     )
 );
 
